--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag leo999/web:$(date +%s)
+      run: docker build . --file Dockerfile --tag leo999/web:latest
     - name: Push docker
-      run: docker push leo999/web:$(date +%s)
+      run: 
+        docker login -u leo999 -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        docker push leo999/web:latest
