--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag leo999/web:latest
     - name: Push docker
-      run: 
+      run: |
         docker login -u leo999 -p ${{ secrets.DOCKER_HUB_TOKEN }}
         docker push leo999/web:latest
