--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build --tag leo999/web:latest .
+      run: docker build --tag leo999/web:$(date +%s) .
     - name: Push docker
       run: |
         docker login -u leo999 -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker push leo999/web:latest
+        docker push leo999/web:$(date +%s)
