--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,12 +11,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    env:
+      LEO999_VERSION: $(date +%s)
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build --tag leo999/web:$(date +%s) .
+      run: docker build --tag leo999/web:${{ LEO999_VERSION }} .
     - name: Push docker
       run: |
         docker login -u leo999 -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker push leo999/web:$(date +%s)
+        docker push leo999/web:${{ LEO999_VERSION }}
